add send message

--- a/src/admin/client/styles/main.scss
+++ b/src/admin/client/styles/main.scss
@@ -44,6 +44,14 @@
 		color: #0c64b6;
 	}
 }
+.msg-form {
+	background: white;
+	border-radius: 5px;
+	padding: 15px;
+    margin: 50px auto ;
+    max-width: 500px;
+}
+
 
 @media (max-width: 991px) {
 	.main-content {
