--- a/src/admin/client/styles/table.scss
+++ b/src/admin/client/styles/table.scss
@@ -1,26 +1,23 @@
 .tables {
     background: white;
+    margin-top: 10px;
     & .ant-pagination {
         text-align: right;
-        padding: 20px;
-    }
-
-    &-header {
         padding: 10px;
-        max-height: 50px;
-        
-        &-search {
-            right: 2px;
-            
-            height: 30px;
-            display: inline;
-            // justify-content: space-between;
+    }
+}
 
-            & p {
-                margin-top: 3px;
-                width: 50%;
-                float: left;
-            }
+.tables-header {
+    background: white;
+    padding: 10px;
+    height: 50px;
+    
+    &-search {
+        right: 2px;
+        & p {
+            margin-top: 3px;
+            width: 50%;
+            float: left;
         }
     }
 }
