--- a/src/admin/client/styles/header.scss
+++ b/src/admin/client/styles/header.scss
@@ -77,6 +77,7 @@
 	top: 0;
 	right: 0;
 	left: 300px;
+	transition: all .2s;
 	height: 75px;
 	z-index: 3;
 }
@@ -94,11 +95,11 @@
 	transform: translateY(-50%);
 }
 
-@media (max-width: 991px) {
+@media (max-width: 578px) {
 	.header-desktop {
 		position: relative;
 		top: 0;
-		left: 0;
+		left: 0 !important;
 		height: 170px;
 	}
 }
@@ -115,7 +116,7 @@
 	top: 51px;
 }
 
-@media (max-width: 991px) {
+@media (max-width: 578px) {
 	.logo {
 		text-align: center;
 	}
@@ -145,15 +146,18 @@
 	}
 }
 
-@media (max-width: 991px) {
+@media (max-width: 578px) {
 	.header-wrap {
-		-webkit-box-orient: vertical;
-		-webkit-box-direction: normal;
-		-webkit-flex-direction: column;
-		-moz-box-orient: vertical;
-		-moz-box-direction: normal;
-		-ms-flex-direction: column;
-		flex-direction: column;
+		flex-wrap: wrap;
+		i, .header-button {
+			order: 2;
+		}
+
+		.search-wrapper {
+			flex: 0 0 100%;
+			order: 1;
+			text-align: center;
+		}
 	}
 
 	.header-wrap .mess-dropdown {
@@ -186,11 +190,11 @@
 	align-items: center;
 }
 
-@media (max-width: 991px) {
+@media (max-width: 578px) {
 	.header-button {
 		margin-top: 30px;
 		margin-left: auto;
-		width: 100%;
+		// width: 100%;
 		padding: 10px;
 		-webkit-box-pack: justify;
 		-webkit-justify-content: space-between;
@@ -681,9 +685,22 @@ $emailListBG: #fff;
 	align-items: center;
 }
 
+.trigger {
+	font-size: 18px;
+	line-height: 64px;
+	padding: 0 24px;
+	cursor: pointer;
+	transition: color .3s;
+}
+
+.trigger:hover {
+	color: #1890ff;
+}
+
 @media (max-width: 990px) {
 	.right-menu {
 		width: 200px;
 		margin-left: auto;
 	}
 }
+
