--- a/src/admin/client/styles/sidebar.scss
+++ b/src/admin/client/styles/sidebar.scss
@@ -1,15 +1,5 @@
-.menu-sidebar {
-	width: 300px;
-	position: fixed;
-	left: 0;
-	top: 0;
-	bottom: 0;
-	background: #fff;
-	overflow-y: auto;
-	z-index: 100
-}
 
-.menu-sidebar .logo {
+.logo {
 	background: #f5f5f5;
 	height: 75px;
 	padding: 0 35px;
@@ -32,7 +22,8 @@
 	font-size: 24px;
 }
 
-.menu-sidebar .logo {
+.logo {
+	
 	.brand1 {
 		color: #7F7169;
 
@@ -44,12 +35,12 @@
 	}
 }
 
-.menu-sidebar .navbar__list .navbar__sub-list {
+.navbar__list .navbar__sub-list {
 	display: none;
 	padding-left: 34px;
 }
 
-.menu-sidebar .navbar__list .navbar__sub-list li a {
+.navbar__list .navbar__sub-list li a {
 	padding: 11.5px 0;
 }
 
@@ -84,22 +75,22 @@
 	color: #4272d7;
 }
 
-.open-sidebar {
-	display: none;
-}
+// .open-sidebar {
+// 	display: none;
+// }
 
-@media (max-width: 991px) {
-	.menu-sidebar {
-		display: none;
-	}
+// @media (max-width: 991px) {
+// 	.menu-sidebar {
+// 		display: none;
+// 	}
 
-	.open-sidebar {
-		display: block;
-		position: absolute;
-		z-index: 1000;
-		top: 105px;
-		left: 10px;
-	}
-}
+// 	.open-sidebar {
+// 		display: block;
+// 		position: absolute;
+// 		z-index: 1000;
+// 		top: 105px;
+// 		left: 10px;
+// 	}
+// }
 
-
+  
