--- a/src/admin/client/styles/cards.scss
+++ b/src/admin/client/styles/cards.scss
@@ -1,23 +1,15 @@
 .overview-wrap {
-	display: -webkit-box;
-	display: -webkit-flex;
-	display: -moz-box;
-	display: -ms-flexbox;
 	display: flex;
-	-webkit-box-pack: justify;
-	-webkit-justify-content: space-between;
-	-moz-box-pack: justify;
-	-ms-flex-pack: justify;
-	justify-content: space-between;
-	-webkit-box-align: center;
-	-webkit-align-items: center;
-	-moz-box-align: center;
-	-ms-flex-align: center;
-	align-items: center;
+	margin: auto;
+	max-width: 800px;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 660px) {
 	.overview-wrap {
+		font-size: 10px;
 		-webkit-box-orient: vertical;
 		-webkit-box-direction: normal;
 		-webkit-flex-direction: column;
@@ -52,12 +44,13 @@
 	-moz-border-radius: 10px;
 	border-radius: 10px;
 	padding-bottom: 0;
-	-webkit-box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.1);
-	-moz-box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.1);
-	box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.1);
+	box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.3);
+	border: 1px solid #e5e5e5;
 	margin-bottom: 40px;
-	min-height: 300px;
+	min-height: 150px;
+	min-width: 350px;
 	display: flex;
+	align-items: center;
 	.overview__inner {
 		margin: auto;
 	}
@@ -104,7 +97,7 @@
 }
 
 .overview-box .icon i {
-	font-size: 60px;
+	font-size: 50px;
 	color: #fff;
 }
 
@@ -114,13 +107,13 @@
 	}
 
 	.overview-box .icon i {
-		font-size: 30px;
+		font-size: 20px;
 	}
 }
 
 @media (max-width: 991px) {
 	.overview-box .icon {
-		font-size: 46px;
+		font-size: 36px;
 	}
 }
 
@@ -132,14 +125,16 @@
 .overview-box .text h2 {
 	font-weight: 300;
 	color: #fff;
-	font-size: 36px;
+	font-size: 26px;
+	text-align: center;
 	line-height: 1;
 	margin-bottom: 5px;
 }
 
 .overview-box .text span {
 	font-size: 18px;
-	color: rgba(255, 255, 255, 0.6);
+	// font-weight: bold;
+	color:white;
 }
 
 @media (min-width: 992px) and (max-width: 1199px) {
