--- a/src/admin/client/styles/sidebar.scss
+++ b/src/admin/client/styles/sidebar.scss
@@ -1,4 +1,13 @@
-
+.menu-sidebar {
+	position: fixed !important;
+	left: 0;
+	top: 0;
+	bottom: 0;
+	background: #fff !important;
+	z-index: 100;
+	overflow-y: auto;
+}
+ 
 .logo {
 	background: #f5f5f5;
 	height: 75px;
@@ -75,22 +84,26 @@
 	color: #4272d7;
 }
 
-// .open-sidebar {
-// 	display: none;
-// }
 
-// @media (max-width: 991px) {
-// 	.menu-sidebar {
-// 		display: none;
-// 	}
 
-// 	.open-sidebar {
-// 		display: block;
-// 		position: absolute;
-// 		z-index: 1000;
-// 		top: 105px;
-// 		left: 10px;
-// 	}
-// }
+.btn-close-sidebar {
+	position: absolute;
+	z-index: 100;
+	right: 20px;
+	top: 26px;
+	font-size: 22px;
+}
+
+.btn-close-sidebar:hover {
+	color: red;
+	cursor: pointer;
+}
+
+
+@media (min-width: 992px) {
+	.btn-close-sidebar {
+		display: none !important;
+	}
+}
 
   
