--- a/src/admin/client/styles/table.scss
+++ b/src/admin/client/styles/table.scss
@@ -2,7 +2,7 @@
     background: white;
     margin-top: 10px;
     & .ant-pagination {
-        text-align: right;
+        text-align: center;
         padding: 10px;
     }
 }
