--- a/src/admin/client/styles/header.scss
+++ b/src/admin/client/styles/header.scss
@@ -178,6 +178,7 @@
 	display: -moz-box;
 	display: -ms-flexbox;
 	display: flex;
+	margin-left: auto;
 	-webkit-box-align: center;
 	-webkit-align-items: center;
 	-moz-box-align: center;
