--- a/src/admin/client/styles/header.scss
+++ b/src/admin/client/styles/header.scss
@@ -14,7 +14,7 @@
 	transition: all 0.5s ease;
 }
 .basic-input--xl {
-	width: 60%;
+	width: 77%;
 }
 
 
@@ -110,7 +110,6 @@
 
 .search-wrapper {
 	width: 60%;
-	text-align: center;
 }
 
 .header-wrap {
@@ -138,6 +137,9 @@
 }
 
 @media (max-width: 578px) {
+	.ant-list.ant-list-split {
+		left: 5%;
+	}
 	.header-wrap {
 		flex-wrap: wrap;
 		i, .header-button {
